--- a/_includes/external-links-new-window.html
+++ b/_includes/external-links-new-window.html
@@ -1,35 +1,19 @@
 <script>
-function ready(fn) {
-  if (document.readyState != 'loading') {
-    fn();
-  } else if (document.addEventListener) {
-    document.addEventListener('DOMContentLoaded', fn);
-  } else {
-    document.attachEvent('onreadystatechange', function() {
-      if (document.readyState != 'loading')
-        fn();
-    });
+function makeExternal(link) {
+  var url      = link.getAttribute('href'),
+  host         = window.location.hostname.toLowerCase(),
+  regex        = new RegExp('^(?:(?:f|ht)tp(?:s)?\:)?//(?:[^\@]+\@)?([^:/]+)', 'im'),
+  match        = url.match(regex),
+  domain       = ((match ? match[1].toString() : ((url.indexOf(':') < 0) ? host : ''))).toLowerCase();
+  
+  // Same domain
+  if (domain != host) {
+    link.className    = 'outbound';
+    link.setAttribute('target', '_blank');    
   }
 }
 
-ready(function() {
-
-  var website = window.location.hostname;
-
-  var internalLinkRegex = new RegExp('^((((http:\\/\\/|https:\\/\\/)(www\\.)?)?'
-                                     + website
-                                     + ')|(localhost:\\d{4})|(\\/.*))(\\/.*)?$', '');
-
-  var anchorEls = document.querySelectorAll('a');
-  var anchorElsLength = anchorEls.length;
-
-  for (var i = 0; i < anchorElsLength; i++) {
-    var anchorEl = anchorEls[i];
-    var href = anchorEl.getAttribute('href');
-
-    if (!internalLinkRegex.test(href)) {
-      anchorEl.setAttribute('target', '_blank');
-    }
-  }
-});
+for (var l = 0, links = document.querySelectorAll('a'), ll = links.length; l < ll; ++l ){
+   makeExternal(links[l]); 
+}
 </script>
