--- a/_includes/external-links-new-window.html
+++ b/_includes/external-links-new-window.html
@@ -1,13 +1,35 @@
-function targetBlank() {
-  // remove subdomain of current site's url and setup regex
-  var internal = location.host.replace("www.", "");
-      internal = new RegExp(internal, "i", "#");
-      
-  var a = document.getElementsByTagName('a'); // then, grab every link on the page
-  for (var i = 0; i < a.length; i++) {
-    var href = a[i].host; // set the host of each link
-    if( !internal.test(href) ) { // make sure the href doesn't contain current site's host
-      a[i].setAttribute('target', '_blank'); // if it doesn't, set attributes
+<script>
+function ready(fn) {
+  if (document.readyState != 'loading') {
+    fn();
+  } else if (document.addEventListener) {
+    document.addEventListener('DOMContentLoaded', fn);
+  } else {
+    document.attachEvent('onreadystatechange', function() {
+      if (document.readyState != 'loading')
+        fn();
+    });
+  }
+}
+
+ready(function() {
+
+  var website = window.location.hostname;
+
+  var internalLinkRegex = new RegExp('^((((http:\\/\\/|https:\\/\\/)(www\\.)?)?'
+                                     + website
+                                     + ')|(localhost:\\d{4})|(\\/.*))(\\/.*)?$', '', '#');
+
+  var anchorEls = document.querySelectorAll('a');
+  var anchorElsLength = anchorEls.length;
+
+  for (var i = 0; i < anchorElsLength; i++) {
+    var anchorEl = anchorEls[i];
+    var href = anchorEl.getAttribute('href');
+
+    if (!internalLinkRegex.test(href)) {
+      anchorEl.setAttribute('target', '_blank');
     }
   }
-};
+});
+</script>
