--- a/_includes/external-links-new-window.html
+++ b/_includes/external-links-new-window.html
@@ -1,3 +1,4 @@
+<script>
 function externalLinks() {
 	if (!document.getElementsByTagName) return;
 	var anchors = document.getElementsByTagName("a");
@@ -15,3 +16,4 @@ function externalLinks() {
 window.onload = function() {
 	externalLinks();
 }
+</script>
