--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,32 @@ layout: page
 # The Home page layout
 ---
 
+<!-- Profile/Introduction -->
+<!-- core -->
+<!-- <div id="core-wrapper" class="col-12 col-lg-11 col-xl-9 pr-xl-4 pb-5"> -->
+  <!-- <div class="post pl-1 pr-1 pl-md-2 pr-md-2"> -->
+
+    {% capture _content %}
+      {% if layout.refactor or page.layout == 'page' %}
+        {% include refactor-content.html content=content %}
+      {% else %}
+        {{ content }}
+      {% endif %}
+    {% endcapture %}
+
+
+    {% assign title = site.data.locales[lang].tabs[tab_key] | default: page.title %}
+    <h1 class="dynamic-title">
+      {{ title }}
+    </h1>
+    <div class="post-content">
+      {{ _content }}
+    </div>
+
+  <!-- </div> -->
+<!-- </div>  -->
+<!-- #core-wrapper -->
+
 {% assign pinned = site.posts | where: "pin", "true" %}
 {% assign default = site.posts | where_exp: "item", "item.pin != true and item.hidden != true" %}
 
@@ -38,6 +64,12 @@ layout: page
   {% endfor %}
 {% endif %}
 
+
+<h2>
+  <i class="fab fa-blogger-b"></i>
+  <span>Blog Posts</span>
+</h2>
+
 <div id="post-list">
 
 {% for post in posts %}
@@ -66,7 +98,8 @@ layout: page
           <i class="far fa-folder-open fa-fw"></i>
           <span>
           {% for category in post.categories %}
-            {{ category }}
+            <!-- {{ category }} -->
+            <a href='{{ site.baseurl }}/categories/{{ category | slugify | url_encode }}/'>{{ category }}</a>
             {%- unless forloop.last -%},{%- endunless -%}
           {% endfor %}
           </span>
@@ -77,7 +110,7 @@ layout: page
       {% if post.pin %}
       <div class="pin">
         <i class="fas fa-thumbtack fa-fw"></i>
-        <span>{{ site.data.locales[site.lang].post.pin_prompt }}</span>
+        <span>{{ site.data.locales[lang].post.pin_prompt }}</span>
       </div>
       {% endif %}
 
